--- a/app/tips/tipView.html
+++ b/app/tips/tipView.html
@@ -1,93 +1,6 @@
-<!--
-<div ng-repeat="tip in vm.tips" id="tips">
-<div class="panel panel-primary">
-	<div class="panel-heading" style="font-size:large"> 
-		{{tip.tipCatagory}}
-	</div>
-
-	<div class="panel-body">
-		<div class = "row">
-			<div class = "col-md-10">
-				<div class="media">
-  					<div class="media-left">
-    					<a href="#">
-      						<img ng-src="{{tip.imageUrl}}"
-							 	 style="width:100%; min-width: 100px;"
-							 	 title="{{tip.tipName}}"> 	 
-    					</a>
-  					</div>
-  					<div class="media-body">
-    					<h4 class="media-heading">{{tip.tipName}}</h4>
-    						<p>{{tip.tipInfo}}</p>
-    						<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-						  <div class="panel panel-default">
-						    <div class="panel-heading" role="tab" id="headingOne{{tip.tipId}}">
-						      <h4 class="panel-title">
-						        <button data-toggle="collapse" class="btn btn-primary" type="button" data-parent="#accordion" href="#collapseOne{{tip.tipId}}" aria-expanded="true" aria-controls="collapseOne{{tip.tipId}}">
-						          Tip #1
-						        </button>
-						      </h4>
-						    </div>
-						    <div id="collapseOne{{tip.tipId}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne{{tip.tipId}}">
-						      <div class="panel-body">
-						        <p>{{tip.tipInfo1}}</p>
-						      </div>
-						    </div>
-						  </div>
-						  <div class="panel panel-default">
-						    <div class="panel-heading" role="tab" id="headingTwo{{tip.tipId}}">
-						      <h4 class="panel-title">
-						        <button data-toggle="collapse" class="btn btn-primary" type="button" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo{{tip.tipId}}" aria-expanded="false" aria-controls="collapseTwo{{tip.tipId}}">
-						          Tip #2
-						        </button>
-						      </h4>
-						    </div>
-						    <div id="collapseTwo{{tip.tipId}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo{{tip.tipId}}">
-						      <div class="panel-body">
-						        <p>{{tip.tipInfo2}}</p>
-						      </div>
-						    </div>
-						  </div>
-						  <div class="panel panel-default">
-						    <div class="panel-heading" role="tab" id="headingThree{{tip.tipId}}">
-						      <h4 class="panel-title">
-						        <button data-toggle="collapse" class="btn btn-primary" type="button" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree{{tip.tipId}}" aria-expanded="false" aria-controls="collapseThree{{tip.tipId}}">
-						          Tip #3
-						        </button>
-						      </h4>
-						    </div>
-						    <div id="collapseThree{{tip.tipId}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree{{tip.tipId}}">
-						      <div class="panel-body">
-						        <p>{{tip.tipInfo3}}</p>
-						      </div>
-						    </div>
-						  </div>
-						</div>
-    						
-  					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	</div>
-</div>
--->
-<!--buttons on the top-->
-<!--
-<div class="row" style="width:315px">
-	<div ng-repeat="tip in vm.tips" id="tips">
-		<div class="col-xs-4">
-			<button class="btn btn-primary"  ng-click="goToPage(tip.tipId)"> 
-				{{tip.tipName}}
-			</button>
-		</div>
-	</div>
-</div>
--->
-<!--each array of datas-->
 <div id="tips">
-	<div style="font-size:large"> 
-		<h2>{{vm.currentTip.tipName}}</h2>
+	<div id="tipTitle"> 
+		{{vm.currentTip.tipName}}
 	</div>
 	<div style="font-size:large">
 		<div class="row">
