updated tips layout, added R&B progressions

--- a/app/progressions/progView.html
+++ b/app/progressions/progView.html
@@ -21,7 +21,17 @@
 						<li >
 							 <a class="active" ng-click="selectStyle('Ballad 2', vm.currentChords.chordGroup)">Ballad 2</a>
 						</li>
+						<li >
+							 <a class="active" ng-click="selectStyle('R&B  1', vm.currentChords.chordGroup)">R&B   1</a>
+						</li>
+						<li >
+							 <a class="active" ng-click="selectStyle('R&B  2', vm.currentChords.chordGroup)">R&B   2</a>
+						</li>
+						<li >
+							 <a class="active" ng-click="selectStyle('R&B  3', vm.currentChords.chordGroup)">R&B   3</a>
+						</li>
 					</ul>
+
 				</td>
 				<td class="col-xs-11 col-sm-1 col-md-1 col-lg-1">
 					<div>
