edit chordView and app.css

--- a/app/chords/chordView.html
+++ b/app/chords/chordView.html
@@ -22,14 +22,13 @@
 					</div>
 
 					<div class = "row" id="sharpFlatNav">
- 							<div class = "col-xs-2 col-sm-2 col-md-2"></div>
- 							<div class = "col-xs-2 col-sm-2 col-md-2">
-							<a ng-class="vm.flat" ng-click="flat('f')" > b </a> </div>
-							<div class = "col-xs-3 col-sm-5 col-md-5"></div>
-							<div class = "col-xs-2 col-sm-2 col-md-2">
-							<a ng-class="vm.sharp" ng-click="sharp('s')" > # </a> </div>
-							<div class = "col-xs-2 col-sm-1 col-md-1"></div>
- 						</div> 
+						<span class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+							<a ng-class="vm.flat" ng-click="flat('f')" > b </a> 
+						</span>
+						<span class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+							<a ng-class="vm.sharp" ng-click="sharp('s')" > # </a> 
+						</span>
+ 					</div> 
 				</td>
 			</table>
 		</div>
