edit the apple touch icon stuff

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <title>Uke 2.22</title>
   <link rel="shortcut icon" href="favicon.ico"/>
-  <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
+  <link rel="apple-touch-icon" href="icon/touch-icon-iphone-60x60.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="icon/touch-icon-ipad-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="icon/touch-icon-iphone-retina-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="icon/touch-icon-ipad-retina-152x152.png">
   
   <!-- Style Sheets-->
   <link href="css/bootstrap.css" rel="stylesheet">
