--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
   <script src="common/services/chordResource.js"></script>
   <script src="common/services/tipResource.js"></script>
   <script src="common/services/improv1Resource.js"></script>
-  <script src="common/services/improv1Resource.js"></script>    
+  <script src="common/services/improv2Resource.js"></script>
+  <script src="common/services/themeResource.js"></script>    
   <script src="common/services/progressionResource.js"></script>
   <script src="common/services/productResourceMock.js"></script>
   <script src="common/services/productService.js"></script>
@@ -53,9 +54,11 @@
   <script src="app/improv/improv1ViewCtrl.js"></script>
   <script src="app/improv/improv2ViewCtrl.js"></script>
   
-
   <!-- Tips Controllers-->
   <script src="app/tips/tipListCtrl.js"></script>
+
+  <!-- Theme Controllers-->
+  <script src="app/themes/themeListCtrl.js"></script>
 <!--
   $('.navbar-collapse a').click(function(){
     $(".navbar-collapse").collapse('hide');
