--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <META character="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <title>Uke 2.23</title>
+  <title>Uke 2.24</title>
   <link rel="shortcut icon" href="favicon.ico"/>
   <link rel="apple-touch-icon" href="apple-touch-icon-iphone-60x60.png">
   <link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon-ipad-76x76.png">
@@ -16,6 +16,10 @@
   <link href="css/toastr.css" rel="stylesheet">
   <link href="css/app.css" rel="stylesheet">
   <link href="css/buttons.css" rel="stylesheet">
+
+  <!--mess with style -->
+  <link ng-controller="ThemeListCtrl as vm" 
+        ng-href="{{vm.permTheme}}" rel="stylesheet">
 
   <!-- Libraries Scripts -->
   <script src="js/jquery.js"></script>
