--- a/app/tips/tipView.html
+++ b/app/tips/tipView.html
@@ -12,7 +12,7 @@
 				<div class="panel panel-default">
 				    <div class="panel-heading" role="tab" id="headingOne{{vm.currentTip.tipId}}">
 				      <h4 class="panel-title">
-				        <button data-toggle="collapse" class="btn btn-primary" type="button" data-parent="#accordion" href="#collapseOne{{vm.currentTip.tipId}}" aria-expanded="true" aria-controls="collapseOne{{vm.currentTip.tipId}}">
+				        <button data-toggle="collapse" class="btn btn-primary title" type="button" data-parent="#accordion" href="#collapseOne{{vm.currentTip.tipId}}" aria-expanded="true" aria-controls="collapseOne{{vm.currentTip.tipId}}">
 				          Tip #1
 				        </button>
 				      </h4>
@@ -26,21 +26,21 @@
 			  	<div class="panel panel-default">
 			   		<div class="panel-heading" role="tab" id="headingTwo{{vm.currentTip.tipId}}">
 			      	<h4 class="panel-title">
-			        <button data-toggle="collapse" class="btn btn-primary" type="button" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo{{vm.currentTip.tipId}}" aria-expanded="false" aria-controls="collapseTwo{{vm.currentTip.tipId}}">
+			        <button data-toggle="collapse" class="btn btn-primary title" type="button" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo{{vm.currentTip.tipId}}" aria-expanded="false" aria-controls="collapseTwo{{vm.currentTip.tipId}}">
 			          Tip #2
 			        </button>
 			      	</h4>
 			    	</div>
 			    	<div id="collapseTwo{{vm.currentTip.tipId}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo{{vm.currentTip.tipId}}">
-			      	<div class="panel-body">
-			        	<p>{{vm.currentTip.tipInfo2}}</p>
-			      	</div>
+				      	<div class="panel-body">
+				        	<p>{{vm.currentTip.tipInfo2}}</p>
+				      	</div>
 			    	</div>
 			  	</div>
 			  	<div class="panel panel-default">
 			    	<div class="panel-heading" role="tab" id="headingThree{{vm.currentTip.tipId}}">
 			      	<h4 class="panel-title">
-			        <button data-toggle="collapse" class="btn btn-primary" type="button" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree{{vm.currentTip.tipId}}" aria-expanded="false" aria-controls="collapseThree{{vm.currentTip.tipId}}">
+			        <button data-toggle="collapse" class="btn btn-primary title" type="button" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree{{vm.currentTip.tipId}}" aria-expanded="false" aria-controls="collapseThree{{vm.currentTip.tipId}}">
 			          Tip #3
 			        </button>
 			      	</h4>
