updated improv nav

--- a/app/improv/improv1View.html
+++ b/app/improv/improv1View.html
@@ -2,45 +2,40 @@
 	<div class="panel-body">
 		<table class="table">
 			<td class="col-xs-1">
-				<div id="patternHdr">
-					Maj
-				</div>
+					<!-- maj pentatonics -->
 					<ul >			
 						<li >
-							 <a ng-class="active('1')" ng-click="selectStyle('1', vm.currentPatterns.chordGroup)">1</a>
+							 <a ng-class="active('1')" ng-click="selectStyle('1', vm.currentPatterns.chordGroup)">MP 1</a>
 						</li>
 						<li >
-							 <a ng-class="active('2')" ng-click="selectStyle('2', vm.currentPatterns.chordGroup)">2</a>
+							 <a ng-class="active('2')" ng-click="selectStyle('2', vm.currentPatterns.chordGroup)">MP 2</a>
 						</li>
 						<li >
-							 <a ng-class="active('3')" ng-click="selectStyle('3', vm.currentPatterns.chordGroup)">3</a>
+						 	<a ng-class="active('3')" ng-click="selectStyle('3', vm.currentPatterns.chordGroup)">MP 3</a>
 						</li>
 						<li >
-							 <a ng-class="active('4')" ng-click="selectStyle('4', vm.currentPatterns.chordGroup)">4</a>
+							 <a ng-class="active('4')" ng-click="selectStyle('4', vm.currentPatterns.chordGroup)">MP 4</a>
 						</li>
 						<li >
-							 <a ng-class="active('5')" ng-click="selectStyle('5', vm.currentPatterns.chordGroup)">5</a>
+							 <a ng-class="active('5')" ng-click="selectStyle('5', vm.currentPatterns.chordGroup)">MP 5</a>
 						</li>
 					</ul>
-
-				<div id="patternHdr">
-					Min
-				</div>
+					<!-- min pentatonics -->
 					<ul >			
 						<li >
-							 <a ng-class="active('m1')" ng-click="selectStyle('m1', vm.currentPatterns.chordGroup)">1</a>
+							 <a ng-class="active('m1')" ng-click="selectStyle('m1', vm.currentPatterns.chordGroup)">mP 1</a>
 						</li>
 						<li >
-							 <a ng-class="active('m2')" ng-click="selectStyle('m2', vm.currentPatterns.chordGroup)">2</a>
+							 <a ng-class="active('m2')" ng-click="selectStyle('m2', vm.currentPatterns.chordGroup)">mP 2</a>
 						</li>
 						<li >
-							 <a ng-class="active('m3')" ng-click="selectStyle('m3', vm.currentPatterns.chordGroup)">3</a>
+							 <a ng-class="active('m3')" ng-click="selectStyle('m3', vm.currentPatterns.chordGroup)">mP 3</a>
 						</li>
 						<li >
-							 <a ng-class="active('m4')" ng-click="selectStyle('m4', vm.currentPatterns.chordGroup)">4</a>
+							 <a ng-class="active('m4')" ng-click="selectStyle('m4', vm.currentPatterns.chordGroup)">mP 4</a>
 						</li>
 						<li >
-							 <a ng-class="active('m5')" ng-click="selectStyle('m5', vm.currentPatterns.chordGroup)">5</a>
+							 <a ng-class="active('m5')" ng-click="selectStyle('m5', vm.currentPatterns.chordGroup)">mP 5</a>
 						</li>
 					</ul>
 			</td>				
@@ -56,11 +51,12 @@
 			</td>
 		</table>
 	</div>
-		<div class = "row" id="patternNav"> 
+		<div class="row" id="patternNav"> 
 			<div ng-repeat="chord in vm.filteredChords">
 				<div class = "col-xs-1">
-				<a ng-class="active(chord)" 
-				   ng-click="selectChord(chord)">{{chord.chordGroup}}</a> </div>
+					<a ng-class="active(chord)" 
+				   		ng-click="selectChord(chord)">{{chord.chordGroup}}</a>
+		   		</div>
 			</div>
 		</div>
 </div>
