--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <META character="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <title>Uke 2.26</title>
+  <title>Uke 2.27</title>
   <link rel="shortcut icon" href="favicon.ico"/>
   <link rel="apple-touch-icon" href="apple-touch-icon-iphone-60x60.png">
   <link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon-ipad-76x76.png">
@@ -42,9 +42,11 @@
   <script src="common/services/improv1Resource.js"></script>
   <script src="common/services/improv2Resource.js"></script>
   <script src="common/services/themeResource.js"></script>    
+  <script src="common/services/beatResource.js"></script>
   <script src="common/services/progressionResource.js"></script>
   <script src="common/services/productResourceMock.js"></script>
   <script src="common/services/productService.js"></script>
+  
 
 
   <!-- Chord View Controllers-->
@@ -62,6 +64,9 @@
 
   <!-- Theme Controllers-->
   <script src="app/themes/themeListCtrl.js"></script>
+
+  <!-- Beat Controllers-->
+  <script src="app/beats/beatViewCtrl.js"></script>
 
 <!--
   $('.navbar-collapse a').click(function(){
@@ -91,7 +96,8 @@
 				<ul class="nav navbar-nav">
 					<li><a ui-sref="chordView">Chords</a></li>
           <li><a ui-sref="progView">Progressions</a></li>
-          <li><a ui-sref="improv1View">Improv</a></li> 
+          <li><a ui-sref="improv1View">Improv</a></li>
+          <li><a ui-sref="beatView">Beats</a></li> 
 					<li><a ui-sref="tipsList">Tips</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Themes <span class="caret"></span></a>
