--- a/app/welcomeView.html
+++ b/app/welcomeView.html
@@ -3,7 +3,7 @@
 		<div class = "col-xs-3">
 			<div class="round-button size-3">
 				<div class="round-button-circle color-1">
-					<a ui-sref="tipsList" class="round-button">Tips</a>
+					<a ui-sref="tipsView" class="round-button">Tips</a>
 				</div>
 			</div>
 		</div>
