--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <META character="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <title>Uke 2.26</title>
+  <title>Uke 2.27</title>
   <link rel="shortcut icon" href="favicon.ico"/>
   <link rel="apple-touch-icon" href="apple-touch-icon-iphone-60x60.png">
   <link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon-ipad-76x76.png">
@@ -58,6 +58,7 @@
   <script src="app/improv/improv2ViewCtrl.js"></script>
   
   <!-- Tips Controllers-->
+  <script src="app/tips/tipViewCtrl.js"></script>
   <script src="app/tips/tipListCtrl.js"></script>
 
   <!-- Theme Controllers-->
@@ -92,7 +93,7 @@
 					<li><a ui-sref="chordView">Chords</a></li>
           <li><a ui-sref="progView">Progressions</a></li>
           <li><a ui-sref="improv1View">Improv</a></li> 
-					<li><a ui-sref="tipsList">Tips</a></li>
+          <li><a ui-sref="tipsView">Tips</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Themes <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
