--- a/app/tips/tipList.html
+++ b/app/tips/tipList.html
@@ -57,6 +57,7 @@
 	<div class="row" id="NextBackBtn"> 
 		<button ng-hide="vm.noPrev" class="btn btn-primary-nextBack"  ng-click="prevPage()">Prev</button>
 		<button ng-hide="vm.noNext" class="btn btn-primary-nextBack"  ng-click="nextPage()">Next</button>
+		<button class="btn btn-primary-nextBack" ui-sref="tipsView">Main</button>
 	</div>
 </div>
 	
