--- a/app/progressions/progView.html
+++ b/app/progressions/progView.html
@@ -4,6 +4,9 @@
 				<td class="col-xs-1">
 					<ul >
 						<li >
+							 <a ng-class="active('Hawaii')" ng-click="selectStyle('Hawaii', vm.currentChords.chordGroup)">Aloha 1</a>
+						</li>
+						<li >
 							 <a ng-class="active('Folk 1')" ng-click="selectStyle('Folk 1', vm.currentChords.chordGroup)">Folk 1</a>
 						</li>
 						<li >
