--- a/app/tips/tipView.html
+++ b/app/tips/tipView.html
@@ -33,8 +33,8 @@
 						 	<span class="glyphicon glyphicon-chevron-right"></span> 
 					</div>
 					<div class="panel-body discription">
-						some temparary tip discription 
-						<!--{{tip.tipDiscription}}-->
+						<!--some temparary tip discription--> 
+						{{tip.tipDescription}}
 					</div>
 				</div>
 			</td>
