fixed progression error for Aloha button

--- a/app/progressions/progView.html
+++ b/app/progressions/progView.html
@@ -4,10 +4,13 @@
 				<td class="col-xs-1">
 					<ul >
 						<li >
-							 <a ng-class="active('Hawaii')" ng-click="selectStyle('Hawaii', vm.currentChords.chordGroup)">Aloha 1</a>
+							 <a ng-class="active('Aloha')" ng-click="selectStyle('Aloha', vm.currentChords.chordGroup)">Aloha 1</a>
 						</li>
 						<li >
-							 <a ng-class="active('Folk 1')" ng-click="selectStyle('Folk 1', vm.currentChords.chordGroup)">Folk 1</a>
+							 <a ng-class="active('Ballad 1')" ng-click="selectStyle('Ballad 1', vm.currentChords.chordGroup)">Ballad 1</a>
+						</li>
+						<li >
+							 <a ng-class="active('Ballad 2')" ng-click="selectStyle('Ballad 2', vm.currentChords.chordGroup)">Ballad 2</a>
 						</li>
 						<li >
 							 <a ng-class="active('Blues 1')" ng-click="selectStyle('Blues 1', vm.currentChords.chordGroup)">Blues 1</a>
@@ -16,13 +19,10 @@
 							 <a ng-class="active('Blues 2')" ng-click="selectStyle('Blues 2', vm.currentChords.chordGroup)">Blues 2</a>
 						</li>
 						<li >
+							 <a ng-class="active('Folk 1')" ng-click="selectStyle('Folk 1', vm.currentChords.chordGroup)">Folk 1</a>
+						</li>
+						<li >
 							 <a ng-class="active('Jazz 1')" ng-click="selectStyle('Jazz 1', vm.currentChords.chordGroup)">Jazz 1</a>
-						</li>
-						<li >
-							 <a ng-class="active('Ballad 1')" ng-click="selectStyle('Ballad 1', vm.currentChords.chordGroup)">Ballad 1</a>
-						</li>
-						<li >
-							 <a ng-class="active('Ballad 2')" ng-click="selectStyle('Ballad 2', vm.currentChords.chordGroup)">Ballad 2</a>
 						</li>
 						<li >
 							 <a ng-class="active('R&B  1')" ng-click="selectStyle('R&B  1', vm.currentChords.chordGroup)">R&B   1</a>
