--- a/app/beats/beatView.html
+++ b/app/beats/beatView.html
@@ -1,4 +1,4 @@
-<div class="panel panel-primary" id="altChords">
+<div class="panel panel-primary" id="beatsChords">
 	<div class="panel-body">
 		<table class="table">
 			<td class="col-xs-1">
@@ -31,7 +31,7 @@
 					</li>  
 			</td>
 			
-			<td class="col-xs-11 col-sm-1 col-md-1 col-lg-1" id="progChords">
+			<td class="col-xs-11 col-sm-1 col-md-1 col-lg-1" id="beatsChords">
 				<div>
 					<img ng-src="{{vm.currentBeat.imageUrl}}"
 						 title="{{vm.currentBeat.beatName}}">
@@ -45,7 +45,7 @@
 			</td>
 		</table>
 	</div>
-	<div class="row" id="progNav">
+	<div class="row" id="beatsNav">
 		<div ng-repeat="beat in vm.filteredBeats">
 			<div class = "col-xs-1">
 				<a ng-class="active(beat)" ng-click="selectBeat(beat)">{{beat.beatName}}</a>
