added some tips, changed puebloClay back to original color butns, tried to change black light to grey butns - with limited success

--- a/app/tips/tipView.html
+++ b/app/tips/tipView.html
@@ -4,7 +4,7 @@
 			<td class="col-xs-2">
 				<ul >
 					<li >
-						 <a ng-class="active('Instrument')" ng-click="selectCatagory('Instrument')">Care</a>
+						 <a ng-class="active('Care')" ng-click="selectCatagory('Care')">Care</a>
 					</li>
 					<li >
 						 <a ng-class="active('History')" ng-click="selectCatagory('History')">History</a>
@@ -13,7 +13,7 @@
 						 <a ng-class="active('Lessons')" ng-click="selectCatagory('Lessons')">Lessons</a>
 					</li>
 					<li >
-						 <a ng-class="active('Accessories')" ng-click="selectCatagory('Accessories')">Misc.</a>
+						 <a ng-class="active('Misc')" ng-click="selectCatagory('Misc')">Misc.</a>
 					</li>
 					<li >
 						 <a ng-class="active('Styles')" ng-click="selectCatagory('Styles')">Styles</a>
