got cookie to work for theme.

--- a/app/themes/themeView.html
+++ b/app/themes/themeView.html
@@ -15,7 +15,8 @@
         				<h3>{{vm.currentTheme.themeName}}</h3>
         				<p>{{vm.currentTheme.themeInfo}}</p>
         				<p> 
-                  <a class="btn btn-default" role="button" ng-click="selectTheme(vm.currentTheme.themeId)">Preview</a>
+                  <a class="btn btn-default" role="button" ng-click="preview(vm.currentTheme.themeId)">Preview</a>
+                  <a class="btn btn-default" role="button" ng-click="selectTheme(vm.currentTheme.themeId)" >Apply</a>
                 </p>
       				</div>
    			 	</div>
