--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <META character="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <title>Uke 2.28</title>
+  <title>Uke 2.29</title>
   <link rel="shortcut icon" href="favicon.ico"/>
   <link rel="apple-touch-icon" href="apple-touch-icon-iphone-60x60.png">
   <link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon-ipad-76x76.png">
@@ -16,6 +16,8 @@
   <link href="css/toastr.css" rel="stylesheet">
   <link href="css/app.css" rel="stylesheet">
   <link href="css/buttons.css" rel="stylesheet">
+  <link href="css/ng-audio.css" rel="stylesheet">
+
 
   <!--Mess with style -->
   <link ng-href="{{permTheme}}" rel="stylesheet">
@@ -30,7 +32,7 @@
   <script src="js/ui-utils.js"></script>
   <script src="js/ui-bootstrap-tpls-0.12.0.min.js"></script>
   <script src="js/toastr.js"></script>
-  <script src="js/angular-media-player.js"></script>
+  <script src="js/ng-audio.min.js"></script>
 
   <!-- Application Scripts-->
   <script src="app/app.js"></script>
