--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
   <script src="js/ui-utils.js"></script>
   <script src="js/ui-bootstrap-tpls-0.12.0.min.js"></script>
   <script src="js/toastr.js"></script>
-  <script src="js/ng-audio.js"></script>
-  <script src="js/angular-media-player.js"></script>
+  <script src="js/ng-audio.min.js"></script>
   <script src="js/angular-cookies.js"></script>
 
 
